Fixed the dark-mode and worked on alignment

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -29,12 +29,19 @@ nav a {
     color: var(--primary-color);
 }
 
+nav a:hover {
+  color: var(--accent-color)
+}
+
 body {
     font-family: Montserrat, sans-serif;
 }
 
 main {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
 	margin: 0;
+  grid-gap: 20px;
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	padding: 1rem;
     background-color: var(--background-color);
@@ -44,6 +51,7 @@ main {
 section {
     margin-bottom: 60px;
 }
+
 
 .welcome {
     display:inline ;
@@ -59,6 +67,17 @@ section {
     height: 100vh;
     width: 100%;
     color: var(--text-color);
+    grid-column: span 3
+}
+
+.spotlights {
+  position: relative;
+  text-align: center;
+  grid-column: span 3;
+}
+
+.current-events{
+  grid-column: span 2;
 }
 
 .hero-text {
@@ -95,6 +114,8 @@ section {
 h2 {
     color: var(--primary-color);
 }
+
+
 
 footer {
     padding-top: 10px;
@@ -201,7 +222,7 @@ footer p {
 
 /* Weather section*/
 
-.weather {
+.current-events, .weather, .spotlights {
   padding: 20px;
   background-color: #f5f5f5;
   border-radius: 8px;
